# kvpm

./: CHANGELOG  CMakeLists.txt  README  kvpm.1  kvpm.desktop
docbook/: index.docbook
icons/app/: CMakeLists.txt
images/: CMakeLists.txt
kvpm/: CMakeLists.txt  Makefile  addmirror.cpp  addmirror.h  allocationpolicy.cpp  allocationpolicy.h  changemirror.cpp  changemirror.h  deviceactions.cpp  deviceactions.h  deviceactionsmenu.cpp  deviceactionsmenu.h  devicemenu.cpp  devicemenu.h  devicemodel.cpp  deviceproperties.cpp  deviceproperties.h  devicepropertiesstack.cpp  devicepropertiesstack.h  devicesizechart.cpp  devicesizechart.h  devicesizechartseg.cpp  devicesizechartseg.h  devicetab.cpp  devicetab.h  devicetree.cpp  devicetree.h  devicetreeview.cpp  devicetreeview.h  dmraid.cpp  dmraid.h  dualselectorbox.cpp  dualselectorbox.h  executablefinder.cpp  executablefinder.h  externalraid.cpp  fsblocksize.cpp  fsblocksize.h  fsck.cpp  fsck.h  (+202 more)
kvpm/po/: kvpm.pot
po/: kvpm.pot
trunk/: CHANGELOG  CMakeLists.txt  README  kvpm.desktop
trunk/docbook/: CMakeLists.txt  index.docbook
trunk/icons/local/: CMakeLists.txt  LICENSE
trunk/kvpm/: CMakeLists.txt  Makefile  addmirror.cpp  addmirror.h  allocationpolicy.cpp  allocationpolicy.h  changemirror.cpp  changemirror.h  deviceactions.cpp  deviceactions.h  deviceactionsmenu.cpp  deviceactionsmenu.h  devicemenu.cpp  devicemenu.h  devicemodel.cpp  devicemodel.h  deviceproperties.cpp  deviceproperties.h  devicepropertiesstack.cpp  devicepropertiesstack.h  devicesizechart.cpp  devicesizechart.h  devicesizechartseg.cpp  devicesizechartseg.h  devicetab.cpp  devicetab.h  devicetree.cpp  devicetree.h  devicetreeview.cpp  devicetreeview.h  dmraid.cpp  dualselectorbox.cpp  dualselectorbox.h  executablefinder.cpp  executablefinder.h  externalraid.cpp  externalraid.h  fsblocksize.cpp  fsblocksize.h  fsck.cpp  (+201 more)
trunk/kvpm/po/: kvpm.pot
trunk/po/: kvpm.pot
